--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-<head></head>
-<body></body>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>разметка HTML</title>
+</head>
+<body>
+  <h1>Code</h1>
+  <p>Заголовок</p>
+</body>
+</html>
